--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/xlsx": "^0.0.36",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "mongodb": "^6.16.0",
