--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/xlsx": "^0.0.36",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
