--- a/package.json
+++ b/package.json
@@ -6,43 +6,64 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node -P tsconfig.scripts.json scripts/seedQuestions.ts"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
+    "@faker-js/faker": "^9.8.0",
     "@types/bcrypt": "^5.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "20.14.10",
     "@types/nodemailer": "^6.4.15",
+    "@types/qrcode.react": "^3.0.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/xlsx": "^0.0.36",
     "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "cloudinary": "^2.6.1",
+    "date-fns": "^4.1.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "formidable": "^3.5.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.5.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.10.1",
     "postcss": "^8.4.39",
+    "qrcode.react": "^4.2.0",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.15",
     "tailwindcss": "^3.4.5",
     "typescript": "5.5.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@swc/core": "^1.11.24",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@types/xlsx": "^0.0.36",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
